--- a/style.css
+++ b/style.css
@@ -1,37 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Rubik+Mono+One&display=swap');
+
 body{
-  background: yellow;
-}
-
-header{
-  background: red;
-}
-
-h1{
-  font-size: 50px;
+  font-family: "Open Sans", sans-serif;
   text-align: center;
-  padding: 100px;
-  color: yellow;
+  color: rgb(256,256, 256);
+  background-image: url("https://www.nasa.gov/sites/all/themes/custom/nasatwo/images/starfield-banner jpg");
+  background-color: rgb(0,0,0);
+  
 }
 
-main{
-  background-color: white;
-  border-radius: 100px;
-  margin: px 50px;
+.titulo-principal{
+  font-family: "Rubik Mono One", sans-serif;
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 2;
 }
 
-h2{
-  padding-top: 10px;
-  font-size: 40px;
-  color: red;
-  text-align: center;
-  font-weight: 600;
+.titulo-secundario{
+  font-size: 22px;
+
 }
 
- p{
-  background-color: red;
-  width: 400px;
-  margin: 10px auto;
-  padding: 10px;
-  border-radius: 10px;
+.span-titulo-secundario, a{
+  color: rgb(254, 188, 50);
 }
 
+
+.paragrafo-titulo{
+  padding: 16px;
+  font-size: 18px;
+  line-height: 1.5;
+  text-align: justify;
+  opacity: 0.8;
+}
